--- a/quienes_somos/pagina1.css
+++ b/quienes_somos/pagina1.css
@@ -7,19 +7,53 @@
 
 /* Estilos para el body */
 body {
-    font-family: Arial, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     line-height: 1.6;
+    background: #f6f7f4;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 /* Estilos para el header */
 #header {
-    background-color: #f4f4f4;
-    padding: 1rem;
-    position: relative;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 5%;
+    height: 100px;
+    background-color: #380D06;
+    z-index: 1000;
 }
 
 #header .logo {
-    max-width: 150px;
+    height: auto;
+}
+
+.menu {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.menu-item {
+    margin: 0 15px;
+    font-size: 18px;
+    font-weight: 600;
+    cursor: pointer;
+}
+
+.menu-item a {
+    text-decoration: none;
+    color: white;
+}
+
+.menu-item a:hover {
+    color: #ff2258;
 }
 
 #menu {
@@ -27,65 +61,37 @@ body {
 }
 
 .menu-icono {
-    width: 30px;
+    width: 25px;
+}
+
+label {
     cursor: pointer;
-}
-
-.menu {
-    list-style: none;
-    position: absolute;
-    right: 0;
-    top: 0;
-    background: #333;
-    color: #fff;
     display: none;
 }
 
-.menu li {
-    display: inline-block;
-    margin: 0;
-}
+@media (max-width: 991px) {
+    .menu {
+        padding: 30px;
+        background-color: #233bb4;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        right: 0;
+        display: none;
+    }
 
-.menu a {
-    color: #fff;
-    text-decoration: none;
-    padding: 1rem;
-    display: block;
-}
+    label {
+        display: block;
+    }
 
-.menu a:hover {
-    background: #575757;
-}
+    .menu-item {
+        margin: 0 0 20px;
+        width: 100%;
+    }
 
-/* Menú desplegable */
-.menu-vertical {
-    list-style: none;
-    position: absolute;
-    background: #333;
-    display: none;
-    padding: 0;
-}
-
-.menu-vertical li {
-    margin: 0;
-}
-
-.menu-vertical a {
-    padding: 0.5rem 1rem;
-    color: #fff;
-}
-
-.menu-vertical a:hover {
-    background: #575757;
-}
-
-/* Mostrar menú en dispositivos móviles */
-#menu:checked ~ .menu {
-    display: block;
-}
-
-#menu:checked ~ .menu-vertical {
-    display: block;
+    #menu:checked ~ .menu {
+        display: block;
+    }
 }
 
 /* Estilos para el contenedor principal */
@@ -163,41 +169,85 @@ body {
 
 /* Estilos para el footer */
 .footer {
-    background-color: #f4f4f4;
-    padding: 1rem;
     display: flex;
-    justify-content: space-between;
     flex-wrap: wrap;
+    background: linear-gradient(20deg, #380D06, #6D120F, #A5241B, #E23D34);
+    width: 100%;
+    padding: 20px;
 }
 
-.footer h4 {
-    margin-bottom: 0.5rem;
+#izquierda, #derecha {
+    width: 50%;
+    margin-bottom: 20px;
+    text-align: center;
 }
 
-.footer a {
-    color: #333;
-    text-decoration: none;
+#izquierda a, #derecha a {
     display: flex;
     align-items: center;
-    margin-bottom: 0.5rem;
+    justify-content: center;
+    padding-left: 10px;
 }
 
-.footer a:hover {
-    text-decoration: underline;
+#izquierda i, #derecha i {
+    font-size: 25px;
+    color: white;
+    padding-right: 10px;
 }
 
-.footer i {
-    margin-right: 0.5rem;
+@media screen and (max-width: 700px) {
+    #izquierda, #derecha {
+        width: 100%;
+    }
 }
 
 /* Estilos para la sección de copyright */
 .copi {
+    background-color: #000000;
+    color: white;
+    width: 100%;
     text-align: center;
-    padding: 1rem;
-    background-color: #333;
-    color: #fff;
+    padding: 10px;
 }
 
 .copi p {
     margin: 0;
+}
+
+/* Estilos para el slider */
+.slider-frame {
+    width: 80%;
+    max-width: 800px;
+    margin: 0 auto;
+    overflow: hidden;
+}
+
+.slider-frame ul {
+    display: flex;
+    padding: 0;
+    width: 400%;
+    animation: slide 10s infinite;
+}
+
+.slider-frame ul li {
+    width: 100%;
+    list-style: none;
+}
+
+.slider-frame ul li img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+}
+
+@keyframes slide {
+    0% {margin-left: 0;}
+    20% {margin-left: 0;}
+    25% {margin-left: -100%;}
+    45% {margin-left: -100%;}
+    50% {margin-left: -200%;}
+    70% {margin-left: -200%;}
+    75% {margin-left: -300%;}
+    95% {margin-left: -300%;}
+    100% {margin-left: 0;}
 }
